@@ -140,6 +140,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Oracle 8               Guy Wicks
 - Oracle 11i             Simon Redhead
 - Oxygene (Delphi Prism) Carlo Kok
+- Oz                     Wolfgang Meyer
 - Pascal                 Tux
 - Perl                   Andreas Gohr, Ben Keen
 - Perl6                  Kodi Arfer
